--- a/src/components/modals/one-click-modal/index.scss
+++ b/src/components/modals/one-click-modal/index.scss
@@ -21,6 +21,14 @@ $robotoLight: 'Roboto-Light';
     margin-left: 16px;
     margin-top: 3px;
   }
+  .oneClickModal_userError{
+    font-family: "Helvetica Neue", Helvetica;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 16px;
+    padding: 2px 18px;
+    color: red;
+  }
   .oneClickModal_userDate {
     display: flex;
     margin-left: 16px;
