--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -181,7 +181,7 @@ h1 {
     color: #f29509;
     font-weight: bold;
   }
-  .header_mobMenu{
+  .header_mobMenu {
     display: none;
 
   }
@@ -359,7 +359,7 @@ h1 {
 
 .whoWeAre {
   width: 100%;
-  height: 300px;
+  //min-height: 300px;
   background-color: orange;
   background-color: rgba(255, 188, 0, 0.65);
   transition: all ease 0.3s;
@@ -471,7 +471,7 @@ h1 {
   min-height: 1000px;
   //opacity: 0.8;
   display: flex;
-  //align-items: center;
+  align-items: center;
   justify-content: center;
   background-attachment: fixed;
   //background-repeat: round;
@@ -492,7 +492,7 @@ h1 {
     width: 50%;
     max-width: 600px;
     background-color: rgba(255, 255, 255, 0.75);
-    height: 400px;
+    min-height: 400px;
     border-radius: 15px;
     padding: 20px;
     //font-weight: bold;
@@ -506,10 +506,11 @@ h1 {
 
 .daBlock {
   background-color: black;
-  height: 100vh;
-  min-height: 600px;
+  //height: 100vh;
+  min-height: 100vh;
   //opacity: 0.8;
   display: flex;
+  padding: 0 20px;
   //align-items: center;
   justify-content: center;
   //background-attachment: fixed;
@@ -594,7 +595,7 @@ h1 {
 
 .advantagesBlock {
   background-color: rgba(232, 232, 232, 0.42);
-  height: 100vh;
+  //height: 100vh;
   min-height: 600px;
   position: relative;
   overflow: hidden;
@@ -609,19 +610,19 @@ h1 {
   }
   .advantagesBlock_container {
     display: flex;
-    height: 100%;
+    //height: 100%;
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
-    width: 40%;
+    width: 50%;
     .advantagesBlock_list {
       border-radius: 3px;
       margin-top: 40px;
       flex-shrink: 0;
       //width: 45%;
       width: 100%;
-      min-width: 400px;
+      //min-width: 400px;
       padding: 15px;
       background-color: #f84500;
       background: -moz-linear-gradient(-45deg, rgba(248, 69, 0, 1) 0%, rgba(247, 115, 0, 0.76) 49%, rgba(247, 109, 0, 0.73) 56%, rgba(248, 71, 0, 1) 98%, rgba(248, 69, 0, 1) 100%);
@@ -823,6 +824,7 @@ h1 {
         position: relative;
         .processGetting_block_right_back {
           position: absolute;
+          transform: scale(0.7);
         }
         .processGetting_block_right_btn {
           z-index: 5;
@@ -1236,7 +1238,7 @@ h1 {
           transition: 0.4s ease all;
           font-family: 'Roboto-Medium';
           //text-align: center;
-          font-size: 2.4rem;
+          font-size: 2.0rem;
           color: #ffffff;
           font-weight: bold;
         }
@@ -1255,8 +1257,11 @@ h1 {
             //font-weight: bold;
           }
         }
-        .bottomBlock_itemIimg {
-          width: 200px;
+        .bottomBlock_itemIimg_wr {
+          text-align: center;
+          .bottomBlock_itemIimg {
+            width: 185px;
+          }
         }
       }
     }
@@ -1417,11 +1422,17 @@ h1 {
       font-size: 2rem;
     }
   }
+  .yourPhoto_examples {
+    flex-wrap: wrap;
+    .yourPhoto_item {
+      width: 100% !important;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    .header_logo{
+    .header_logo {
       width: 95px;
     }
     .header_items {
@@ -1439,7 +1450,7 @@ h1 {
       /* justify-content: center; */
       align-items: center;
       flex-wrap: wrap;
-      .header_item{
+      .header_item {
         width: 100%;
         display: flex;
         justify-content: center;
@@ -1448,12 +1459,98 @@ h1 {
         }
       }
     }
-    .header_mobMenu{
+    .header_mobMenu {
       display: block;
       z-index: 99999;
-      img{
+      img {
         cursor: pointer;
         width: 30px;
+      }
+    }
+  }
+
+  .hiBlock_content_advantages {
+    flex-wrap: wrap;
+    .hiBlock_content_advantages_item {
+      width: 100%;
+      &:nth-child(-n+2):after {
+        opacity: 0;
+      }
+    }
+  }
+
+  .howWeMake_blocks_item {
+    width: 100% !important;
+  }
+
+  .examplesImages_item {
+    width: 100% !important;
+  }
+
+  .howWeMake_blocks_item {
+    .howWeMake_blocks_item_title {
+      text-align: center;
+    }
+    .howWeMake_blocks_item_img {
+      width: 100%;
+    }
+  }
+
+  .examplesContBody {
+    flex-wrap: wrap;
+    .examplesContBodyText {
+      width: 100%;
+    }
+    img {
+      width: 100%;
+    }
+  }
+
+
+
+  .processGetting_cont {
+    .processGetting_block_left {
+      .processGetting_block_left_item {
+        &:after {
+          display: none !important;
+        }
+      }
+    }
+    .processGetting_block_center {
+      display: none;
+    }
+    .processGetting_block_right {
+      display: none !important;
+    }
+  }
+
+  .price_prices {
+    flex-wrap: wrap;
+    .price_prices_squ {
+      margin-bottom: 20px;
+      .price_prices_squ_text {
+        margin-bottom: 30px !important;
+      }
+    }
+  }
+
+  .buyNowBlock_container {
+    width: 90% !important;
+  }
+
+  .advantagesBlock_container {
+    width: 90% !important;
+  }
+
+  .bottomBlock_items {
+    flex-wrap: wrap;
+    .bottomBlock_item {
+      width: 100% !important;
+      .bottomBlock_item_title {
+        text-align: center;
+      }
+      .bottomBlock_item_text {
+        text-align: center;
       }
     }
   }
