--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -359,6 +359,9 @@ h1 {
 
 .whoWeAre {
   width: 100%;
+  min-height: 300px;
+  display: flex;
+  align-items: center;
   //min-height: 300px;
   background-color: orange;
   background-color: rgba(255, 188, 0, 0.65);
