add google fonts

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,7 +1,7 @@
 @import "hoverBlock";
 
 body {
-  font-family: 'Roboto-Medium', Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial, Helvetica;
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -169,15 +169,15 @@ h1 {
       span {
         transition: all ease 0.3s;
         cursor: pointer;
-        font-family: 'Roboto-Medium';
-        font-size: 2.2rem;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 1.9rem;
         color: #ffffff;
       }
     }
   }
   .header_number {
-    font-family: 'Roboto-Medium';
-    font-size: 3.5rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 3.0rem;
     color: #f29509;
     font-weight: bold;
   }
@@ -209,7 +209,7 @@ h1 {
       text-shadow: 2px -2px 2px rgba(255, 83, 16, 0.95);
       text-align: center;
       font-weight: bold;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       color: #ffffff;
       margin-bottom: 25px;
     }
@@ -239,7 +239,7 @@ h1 {
       .hiBlock_content_advantages_item {
         //display: none;
         opacity: 0;
-        font-family: 'Roboto-Medium';
+        font-family: 'Open Sans', sans-serif;
         text-align: center;
         margin-right: 20px;
         font-size: 2.3rem;
@@ -290,7 +290,7 @@ h1 {
     max-width: 940px;
     .price_title {
       font-weight: bold;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 4rem;
       color: #2f2f2f;
@@ -299,7 +299,7 @@ h1 {
     .price_title_discount {
       margin-bottom: 40px;
       font-weight: bold;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 2.6rem;
       color: #f04100;
@@ -310,7 +310,7 @@ h1 {
       justify-content: space-between;
       .price_prices_squ {
         .price_prices_squ_title {
-          font-family: 'Roboto-Medium';
+          font-family: 'Open Sans', sans-serif;
           font-size: 2.4rem;
           color: #2f2f2f;
           margin-bottom: 8px;
@@ -320,8 +320,8 @@ h1 {
           .price_prices_squ_text_size {
             color: #de590b;
           }
-          font-family: 'Roboto-Medium';
-          font-size: 2.4rem;
+          font-family: 'Open Sans', sans-serif;
+          font-size: 1.9rem;
           color: #2f2f2f;
           margin-bottom: 5px;
           .price_prices_squ_text_disc {
@@ -347,7 +347,7 @@ h1 {
       margin-bottom: 10px;
     }
     .price_add {
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       font-size: 2.4rem;
       color: #2f2f2f;
       span {
@@ -382,7 +382,7 @@ h1 {
     height: 100%;
     .whoWeAre_title {
       transition: all ease 0.3s;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 2.2rem;
       color: #2f2f2f;
@@ -402,14 +402,14 @@ h1 {
       //margin-top: 40px;
       text-align: center;
       //transition: 0.4s ease all;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 4rem;
       color: #1e1e1e;
     }
     .howWeMake_description {
       margin-top: 10px;
-      font-family: Roboto-Medium;
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 1.7rem;
       color: #565454;
@@ -429,7 +429,7 @@ h1 {
         }
         .howWeMake_blocks_item_title {
           color: #1e1e1e;
-          font-family: Roboto-Medium;
+          font-family: 'Open Sans', sans-serif;
           font-size: 2.2rem;
           margin-bottom: 8px;
           font-weight: bold;
@@ -444,7 +444,7 @@ h1 {
           }
         }
         .howWeMake_blocks_item_desc {
-          font-family: 'Roboto-Medium';
+          font-family: 'Open Sans', sans-serif;
           //text-align: center;
           font-size: 1.7rem;
           color: #565454;
@@ -499,7 +499,7 @@ h1 {
     border-radius: 15px;
     padding: 20px;
     //font-weight: bold;
-    font-family: 'Roboto-Medium';
+    font-family: 'Open Sans', sans-serif;
     //text-align: center;
     font-size: 2.5rem;
     line-height: 3rem;
@@ -530,7 +530,7 @@ h1 {
     padding: 40px 10px;
     .daBlock_title {
       font-weight: bold;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       //text-align: center;
       font-size: 5rem;
       line-height: 6rem;
@@ -538,7 +538,7 @@ h1 {
       margin-bottom: 35px;
     }
     .daBlock_desc {
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       //text-align: center;
       font-size: 3rem;
       line-height: 5rem;
@@ -561,7 +561,7 @@ h1 {
         padding: 0 30px;
         border-radius: 6px;
         span {
-          font-family: 'Roboto-Medium';
+          font-family: 'Open Sans', sans-serif;
           font-size: 3rem;
           font-weight: bold;
           line-height: 6rem;
@@ -633,7 +633,7 @@ h1 {
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f84500', endColorstr='#f84500', GradientType=1);
       background: linear-gradient(135deg, #f84500, rgba(247, 115, 0, .76) 49%, rgba(247, 109, 0, .89) 56%, #f84700 98%, #f84500);
       .advantagesBlock_list_item {
-        font: 2.5rem/3.2rem 'Roboto-Medium';
+        font: 2.5rem/3.2rem 'Open Sans', sans-serif;
         background-color: white;
         text-align: center;
         padding: 10px;
@@ -667,7 +667,7 @@ h1 {
     padding-top: 10px;
     text-align: center;
     color: #f84500;
-    font-family: 'Roboto-Regular';
+    font-family: 'Open Sans', sans-serif;
     font-size: 3rem;
     margin-bottom: 25px;
     font-weight: 700;
@@ -751,14 +751,14 @@ h1 {
     //.processGetting_title{
     //  text-align: center;
     //  color: #f84500;
-    //  font-family: 'Roboto-Regular';
+    //  font-family: 'Open Sans', sans-serif;
     //  font-size: 3rem;
     //  margin-bottom: 30px;
     //  font-weight: bold;
     //}
     .processGetting_title {
       margin-bottom: 25px;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 4rem;
       font-weight: bold;
@@ -796,13 +796,13 @@ h1 {
           }
           .processGetting_block_left_item_title {
             color: #ffffff;
-            font-family: 'Roboto-Regular';
+            font-family: 'Open Sans', sans-serif;
             font-size: 2.2rem;
             margin-bottom: 4px;
             font-weight: bold;
           }
           .processGetting_block_left_item_text {
-            font-family: Roboto-Medium;
+            font-family: 'Open Sans', sans-serif;
             font-size: 2rem;
             color: #ffffff;
           }
@@ -864,7 +864,7 @@ h1 {
           }
           span {
             transition: all .4s ease;
-            font-family: 'Roboto-Medium';
+            font-family: 'Open Sans', sans-serif;
             text-align: center;
             font-size: 2.4rem;
             color: #fff
@@ -913,14 +913,14 @@ h1 {
   .yourPhoto_title {
     text-align: center;
     //transition: 0.4s ease all;
-    font-family: 'Roboto-Medium';
+    font-family: 'Open Sans', sans-serif;
     text-align: center;
     font-size: 4rem;
     color: #1e1e1e;
   }
   .yourPhoto_description {
     margin-top: 10px;
-    font-family: 'Roboto-Medium';
+    font-family: 'Open Sans', sans-serif;
     text-align: center;
     font-size: 1.7rem;
     color: #565454;
@@ -966,7 +966,7 @@ h1 {
   .container {
     .questions_title {
       margin-bottom: 25px;
-      font-family: Roboto-Medium;
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 4rem;
       color: #1e1e1e;
@@ -997,13 +997,13 @@ h1 {
     flex-direction: column;
     .examplesContBodyTextTitle {
       font-size: 30px;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       line-height: 1.45;
       font-weight: bold;
     }
     .examplesContBodyTextContent {
       font-size: 20px;
-      font-family: 'Roboto-Regular';
+      font-family: 'Open Sans', sans-serif;
       line-height: 1.55;
       padding-top: 20px;
     }
@@ -1029,7 +1029,7 @@ h1 {
     .buyNowContBodyTextTitle {
       font-size: 30px;
       text-align: center;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       line-height: 1.45;
       font-weight: bold;
     }
@@ -1058,7 +1058,7 @@ h1 {
       }
       span {
         transition: all .4s ease;
-        font-family: 'Roboto-Medium';
+        font-family: 'Open Sans', sans-serif;
         text-align: center;
         font-size: 2.4rem;
         color: #fff
@@ -1087,7 +1087,7 @@ h1 {
     .buyNowContBodyTextTitle2 {
       font-size: 40px;
       text-align: center;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       line-height: 1.45;
       color: white;
       font-weight: bold;
@@ -1150,7 +1150,7 @@ h1 {
     }
     span {
       transition: all .4s ease;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 2.4rem;
       color: #fff;
@@ -1173,7 +1173,7 @@ h1 {
     border-radius: 6px;
     color: #1e1e1e;
     margin-right: 20px;
-    font-family: 'Roboto-Medium';
+    font-family: 'Open Sans', sans-serif;
     font-size: 2.4rem;
   }
   .callUs_btn {
@@ -1197,7 +1197,7 @@ h1 {
     //}
     span {
       transition: 0.4s ease all;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
       font-size: 2.4rem;
       color: #ffffff;
@@ -1222,7 +1222,7 @@ h1 {
       padding: 40px 0 10px 0;
       text-align: center;
       transition: 0.4s ease all;
-      font-family: 'Roboto-Medium';
+      font-family: 'Open Sans', sans-serif;
       font-size: 1.4rem;
       color: #ffffff;
       line-height: 3rem;
@@ -1239,7 +1239,7 @@ h1 {
         .bottomBlock_item_title {
           margin-bottom: 15px;
           transition: 0.4s ease all;
-          font-family: 'Roboto-Medium';
+          font-family: 'Open Sans', sans-serif;
           //text-align: center;
           font-size: 2.0rem;
           color: #ffffff;
@@ -1253,7 +1253,7 @@ h1 {
           }
           a {
 
-            font-family: 'Roboto-Medium';
+            font-family: 'Open Sans', sans-serif;
             //text-align: center;
             font-size: 2rem;
             color: #ffffff;
@@ -1417,12 +1417,12 @@ h1 {
     .header_items {
       .header_item {
         span {
-          font-size: 1.7rem;
+          font-size: 1.5rem;
         }
       }
     }
     .header_number {
-      font-size: 2rem;
+      font-size: 1.7rem;
     }
   }
   .yourPhoto_examples {
