--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1432,7 +1432,11 @@ h1 {
     }
   }
 }
-
+@media screen and (max-width: 905px) {
+  .price_prices_squ_text{
+    font-size: 1.5rem!important;
+  }
+}
 @media screen and (max-width: 768px) {
   .header {
     .header_logo {
