--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1517,6 +1517,7 @@ h1 {
 
   .processGetting_cont {
     .processGetting_block_left {
+      width: 100% !important;
       .processGetting_block_left_item {
         &:after {
           display: none !important;
