--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1112,7 +1112,7 @@ h1 {
     cursor: pointer;
     background-color: #f84500;
     border-radius: 6px;
-    height: 50px;
+    min-height: 50px;
     padding: 0 20px;
     border: 1px solid transparent;
     transition: all .4s ease;
