--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -178,6 +178,7 @@ h1 {
   .header_number {
     font-family: 'Open Sans', sans-serif;
     font-size: 3.0rem;
+    color: orange;
     color: #f29509;
     font-weight: bold;
   }
