add test class in project

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1568,3 +1568,12 @@ h1 {
     }
   }
 }
+
+
+tempClassEmoveMe{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px;
+  border-radius: 4px;
+}
