--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -182,8 +182,9 @@ h1 {
   .header_number {
     font-family: 'Open Sans', sans-serif;
     font-size: 3.0rem;
-    color: orange;
-    color: #f29509;
+    //color: orange;
+    //color: #f29509;
+    color: #2EA9FD;
     font-weight: bold;
   }
   .header_mobMenu {
@@ -211,7 +212,7 @@ h1 {
       animation: leftShowAnimation 0.4s linear;
       font-size: 7rem;
       width: 100%;
-      text-shadow: 2px -2px 2px rgba(255, 83, 16, 0.95);
+      text-shadow: 2px -2px 2px rgba(46, 169, 253, 0.95);
       text-align: center;
       font-weight: bold;
       font-family: 'Open Sans', sans-serif;
@@ -368,11 +369,13 @@ h1 {
   display: flex;
   align-items: center;
   //min-height: 300px;
-  background-color: orange;
-  background-color: rgba(255, 188, 0, 0.65);
+  //background-color: orange;
+  //background-color: rgba(255, 188, 0, 0.65);
+  background-color: rgba(46, 169, 253, 0.65);
   transition: all ease 0.3s;
   &:hover {
-    background-color: rgba(255, 188, 0, 0.85);
+    //background-color: rgba(255, 188, 0, 0.85);
+    background-color: rgba(46, 169, 253, 0.85);
     .container {
       .whoWeAre_title {
         color: #000000;
@@ -1096,7 +1099,8 @@ h1 {
       line-height: 1.45;
       color: white;
       font-weight: bold;
-      text-shadow: 2px -2px 2px rgba(255, 83, 16, 0.95);
+      //text-shadow: 2px -2px 2px rgba(255, 83, 16, 0.95);
+      text-shadow: 2px -2px 2px rgba(46, 169, 253, 0.95);
 
     }
   }
@@ -1115,7 +1119,8 @@ h1 {
     min-width: 150px;
     align-items: center;
     cursor: pointer;
-    background-color: #f84500;
+    //background-color: #f84500;
+    background-color: #2EA9FD;
     border-radius: 6px;
     min-height: 50px;
     padding: 0 20px;
@@ -1148,9 +1153,11 @@ h1 {
     }
     &:hover {
       background-color: #ffffff;
-      border-color: #F84500;
+      //border-color: #F84500;
+      border-color: #2EA9FD;
       span {
-        color: #F84500;
+        color: #2EA9FD;
+        //color: #F84500;
       }
     }
     span {
@@ -1184,7 +1191,8 @@ h1 {
   .callUs_btn {
     min-width: 150px;
     cursor: pointer;
-    background-color: #F84500;
+    //background-color: #F84500;
+    background-color: #2EA9FD;
     display: flex;
     justify-content: center;
     align-items: center;
