--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -369,13 +369,13 @@ h1 {
   display: flex;
   align-items: center;
   //min-height: 300px;
-  //background-color: orange;
-  //background-color: rgba(255, 188, 0, 0.65);
-  background-color: rgba(46, 169, 253, 0.65);
+  background-color: orange;
+  background-color: rgba(255, 188, 0, 0.65);
+  //background-color: rgba(46, 169, 253, 0.65);
   transition: all ease 0.3s;
   &:hover {
-    //background-color: rgba(255, 188, 0, 0.85);
-    background-color: rgba(46, 169, 253, 0.85);
+    background-color: rgba(255, 188, 0, 0.85);
+    //background-color: rgba(46, 169, 253, 0.85);
     .container {
       .whoWeAre_title {
         color: #000000;
