disable social blocks

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -670,6 +670,7 @@ h1 {
 }
 
 .socBlock {
+  display: none;
   background-color: hsla(0, 0%, 100%, 0.42);
   .socBlock_title {
     padding-top: 10px;
